# pycoke

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  Readme.md  pyproject.toml  setup.py
pycoke/: __init__.py  cpp_pycoke.pyi
src/: background_worker.cpp  complex_work.cpp  pycoke.cpp  pycoke.h  simple_test.cpp
test/: test.py
